feat: render todo list by user

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Todo App</title>
 </head>
 <body>
-  <main id="app">
+  <main id="app" style="display: flex; flex-direction: row;">
 
   </main>
   <script src="/src/main.js" type="module"></script>
